// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table user {
  id integer [primary key]
  name varchar
  email varchar
  hash_pasword varchar
  created_at timestamp
}

Table list {
  id integer [primary key]
  name varchar
  position integer
  owner integer
  cards integer[]
  created_at timestamp
}

Table card {
  id integer [primary key]
  name varchar
  description text
  position integer
  owner integer
  list integer
  comments integer[]
  created_at timestamp
}

Table comment {
  id integer [primary key]
  description varchar
  owner integer
  card integer
  created_at timestamp
}

Ref: list.cards > card.list

Ref: comment.owner > user.id

Ref: list.owner > user.id

Ref: card.owner > user.id

Ref: card.comments > comment.card